# SmKaraokeMaker

./: .gitignore  CLAUDE.md  README.md  README.ru.md  init.sh  pyproject.toml
smkaraokemaker/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
smkaraokemaker/modules/: audio_extractor.py  speech_recognizer.py  subtitle_renderer.py  video_composer.py  vocal_separator.py
smkaraokemaker/utils/: ffmpeg_utils.py  fonts.py  temp_manager.py  validators.py
tests/: conftest.py  test_audio_extractor.py  test_models.py  test_speech_recognizer.py  test_subtitle_renderer.py  test_temp_manager.py  test_validators.py  test_video_composer.py
